--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,7 +13,7 @@ body{
    color: #111;
    font-size:26px;
    font-weight:800;
-   font-family: 'Baloo Thambi', cursive;
+   font-family:serif;
    letter-spacing: -7px;
 }
 .text-container > span ,.text-container1 > span{
